--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@chakra-ui/core": "^0.3.2",
     "@emotion/core": "^10.0.17",
     "@emotion/styled": "^10.0.17",
+    "axios": "^0.19.0",
     "emotion-theming": "^10.0.19",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
